# PoetryDocker

./: Dockerfile  README.md  pyproject.toml
tests/: test_poetry.py
