[tool.poetry]
name = "PoetryDocker"
version = "1.0.0"
description = "An example for running Poetry within a Docker container."
authors = ["Pierre-Luc Delisle <github@pierre-luc-delisle.com>"]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
pyhamcrest = "^2.1.0"

[tool.poetry.group.code-quality.dependencies]
black = "^24.4.2"
flake8 = "^6.1.0"
isort = "^5.13.2"
mypy = "^1.10.0"

[tool.black]
line-length = 100
target-version = ["py312"]
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | \.idea
    | _build
    | buck-out
    | build
    | dist
    | node_modules
)/
'''

[tool.isort]
profile = "black"
py_version = 312

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
